fix(Styling): Adds grey background when grid tile is displaying an image. Adds overflow:hidden to Tile css

--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -5,6 +5,7 @@
   background-color: #fff;
   box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.29);
   border: 2px solid #fff;
+  overflow: hidden;
 }
 .TileTitle {
   position: absolute;
